# Quilum

./: .gitignore  README.md  app-blocking-mechanisms.md  package.json  shell.nix  vite.config.js
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/applock/: Cargo.toml
src-tauri/crates/applock-test-dummy/: Cargo.toml
src-tauri/crates/applock-test-dummy/src/: main.rs
src-tauri/crates/applock/src/: lib.rs  process_polling.rs  session.rs  timer.rs
src-tauri/crates/applock/src/app_list/: mod.rs  types.rs
src-tauri/crates/applock/src/app_list/linux/: mod.rs
src-tauri/crates/applock/src/app_list/macos/: app_list.rs  mod.rs
src-tauri/crates/applock/src/app_list/windows/: app_list.rs  mod.rs
src-tauri/crates/applock/src/model/: app_identifier.rs  mod.rs
src-tauri/crates/applock/tests/: blocking.rs
src-tauri/crates/quilum/: Cargo.toml  tauri.conf.json
src-tauri/crates/quilum-db/: Cargo.toml
src-tauri/crates/quilum-db/resources/: init.surql
src-tauri/crates/quilum-db/src/: lib.rs  storage.rs
src-tauri/crates/quilum-db/src/model/: app_identifier.rs  blocked_app.rs  event.rs  focus_session.rs  mod.rs  plan.rs  slot.rs  task.rs  tasklist.rs
src-tauri/crates/quilum-db/src/storage/: mod.rs  tests.rs
src-tauri/crates/quilum/capabilities/: default.json
src-tauri/crates/quilum/src/: lib.rs  main.rs  model.rs
src-tauri/crates/quilum/src/commands/: app_blocking.rs  mod.rs  session.rs
src-tauri/crates/quilum/src/db/: mod.rs  tests.rs
src-tauri/crates/quilum/src/model/: event.rs  mod.rs  plan.rs  slot.rs  task.rs  tasklist.rs
src-tauri/crates/quilum/src/scheduler/: mod.rs  tests.rs
src-tauri/crates/quilum/src/scheduler/state/: mod.rs  tests.rs
src-tauri/src/: lib.rs
src-tauri/src/model/: event.rs  mod.rs  plan.rs  slot.rs  task.rs
src-tauri/src/scheduler/: mod.rs  tests.rs
src-tauri/src/scheduler/state/: mod.rs  tests.rs
src/lib/: api.ts
src/routes/: +layout.svelte  +page.svelte  (+2 more)
(+24 files in other folders)
