[workspace]
members = ["crates/applock","crates/quilum", "crates/quilum-db"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
surrealdb = { version = "3", features = ["kv-mem", "kv-rocksdb", "protocol-ws"] }
