[package]
name = "quilum-db"
version = "0.1.0"
edition = "2024"

[dependencies]
surrealdb.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
directories = "6"

[target.'cfg(target_os = "linux")'.dependencies.surrealdb]
workspace = true
features = ["protocol-ws"]

[target.'cfg(not(target_os = "linux"))'.dependencies.surrealdb]
workspace = true
features = ["kv-rocksdb"]
